src/test/ui/issues/issue-2150.stderr
error: unreachable statement
  --> $DIR/issue-2150.rs:8:5
   |
LL |     for x in &v { i += 1; }
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/issue-2150.rs:1:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

